@@ -1,5 +1,5 @@
 #ifndef __build_h
 #define __build_h
-#define NETXMS_VERSION_BUILD 7872
-#define NETXMS_VERSION_BUILD_STRING _T("7872")
+#define NETXMS_VERSION_BUILD 7873
+#define NETXMS_VERSION_BUILD_STRING _T("7873")
 #endif
