@@ -1,5 +1,5 @@
 package org.netxms.base;
 public final class BuildNumber {
-   public static final String TEXT = "7872";
-   public static final int NUMBER = 7872;
+   public static final String TEXT = "7873";
+   public static final int NUMBER = 7873;
 }
